# Ic-stable-storage

./: .gitignore  Cargo.toml  Makefile  README.md  dfx.json  storage.did
fileupload/: Cargo.toml  Makefile  dfx.json
fileupload/.dfx/local/: canister_ids.json
fileupload/.dfx/local/canisters/fileupload/: fileupload.did  fileupload.did.js
fileupload/.dfx/local/canisters/fileupload_assets/assets/: index.html  index.js
fileupload/.dfx/state/replicated_state/: ic.json5  nns_public_key.pem  registry.proto
fileupload/.dfx/state/replicated_state/ic_registry_local_store/: time.local_store.v1.CertificationTime.pb
fileupload/.dfx/state/replicated_state/ic_registry_local_store/0000000000/00/00/: 01.pb
fileupload/.dfx/state/replicated_state/node-100/: committee_signing_key  derived_node_id  idkg_mega_encryption_key  ni_dkg_dealing_encryption_key  node_signing_key  transport_tls_certificate
fileupload/.dfx/state/replicated_state/node-100/crypto/: public_keys.pb  sks_data.pb
fileupload/.dfx/state/replicated_state/node-100/ic_consensus_pool/certification/: 000025.sst  000026.log.REMOVED.git-id  000028.sst  IDENTITY  LOG  MANIFEST-000003  OPTIONS-000008
fileupload/.dfx/state/replicated_state/node-100/ic_consensus_pool/consensus/: 000079.log.REMOVED.git-id  000081.sst  000083.sst  000085.sst  000087.sst  000089.sst  000091.sst  000093.sst  000095.sst  000097.sst  000099.sst  000101.sst  000103.sst  IDENTITY  LOG.REMOVED.git-id  MANIFEST-000003  OPTIONS-000028
fileupload/.dfx/state/replicated_state/node-100/state/: states_metadata.pbuf
fileupload/src/declarations/fileupload/: fileupload.did.d.ts
fileupload/src/fileupload/: main.rs
fileupload/src/fileupload/types/: Cargo.toml
fileupload/src/fileupload/types/src/: lib.rs
fileupload/src/fileupload_assets/src/: index.js
manager/: Cargo.toml  manager.did
playground/: Cargo.toml  play.did
playground/benches/: my_benchmark copy.rs_copy  serialize.rs
playground/examples/: teste.rs
playground/src/: main copy.rs
(+63 files in other folders)
