[package]
name = "fileupload"
version = "0.1.0"
edition = "2021"
authors = ["victorcastro89@hotmail.com"]

[[bin]]
name="fileupload"
path= "src/fileupload/main.rs"

[dev-dependencies]
criterion = "0.3"

# [[bench]]
# name = "my_benchmark"
# harness = false
# path = "benches/my_benchmark.rs"
# html_reports = true

[dependencies]
stable-structures = {path = "../stable-structures/" }
base64 = "0.13.0"
candid = "0.7.4"
ic-cdk = "0.5.0"
ic-cdk-macros = "0.5.0"
serde =   { version = "1.0.137", features = ["derive"] } 
num-traits = "0.2.14"
serde_bytes = "0.11.5"
bincode = "1.3.3"
serde_json = "1.0"
ciborium = "0.2.0"
serde_cbor = "0.11.2"
rmp-serde = "1.1.0"
types = { path = "./src/fileupload/types" }
utils = { path = "./src/fileupload/utils" }
[dependencies.uuid]
version = "1.1.2"
