[package]
name = "playground"
version = "0.1.0"
edition = "2021"
authors = ["Xingwu Wang <wxw1198@gmail.com>"]
description = "A simple library using stable memory is implemented using rust"
license = "MIT"


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "serialize"
harness = false
path = "benches/serialize.rs"


[dependencies]
stable-structures = {path = "../stable-structures/" }
base64 = "0.13.0"
candid = "0.7.4"
ic-cdk = "0.5.0"
ic-cdk-macros = "0.5.0"
serde =   { version = "1.0.137", features = ["derive"] } 
num-traits = "0.2.14"
serde_bytes = "0.11.5"
bincode = "1.3.3"
serde_json = "1.0"
ciborium = "0.2.0"
serde_cbor = "0.11.2"
rmp-serde = "1.1.0"
rand = "0.8.5"
[dependencies.uuid]
version = "1.1.2"

[[example]]
name = "teste"